Finished work on social statuses

--- a/Core.Data/Core.Data.csproj
+++ b/Core.Data/Core.Data.csproj
@@ -119,10 +119,12 @@
     <Compile Include="PartialClasses\InsuranceDocument.cs" />
     <Compile Include="PartialClasses\MKB.cs" />
     <Compile Include="PartialClasses\Okato.cs" />
+    <Compile Include="PartialClasses\Org.cs" />
     <Compile Include="PartialClasses\PersonAddress.cs" />
     <Compile Include="PartialClasses\PersonDisability.cs" />
     <Compile Include="PartialClasses\PersonIdentityDocument.cs" />
     <Compile Include="PartialClasses\PersonName.cs" />
+    <Compile Include="PartialClasses\PersonSocialStatus.cs" />
     <Compile Include="PartialClasses\RecordContract.cs" />
     <Compile Include="RecordContract.cs">
       <DependentUpon>ChildCareModel.tt</DependentUpon>
