Schema changed! Draft version of RecordDocuments

--- a/Core.Data/Core.Data.csproj
+++ b/Core.Data/Core.Data.csproj
@@ -129,6 +129,9 @@
     <Compile Include="RecordContract.cs">
       <DependentUpon>ChildCareModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="RecordDocument.cs">
+      <DependentUpon>ChildCareModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="ReportTemplate.cs">
       <DependentUpon>ChildCareModel.tt</DependentUpon>
     </Compile>
