--- a/OrganizationContracts/OrganizationContractsModule.csproj
+++ b/OrganizationContracts/OrganizationContractsModule.csproj
@@ -76,6 +76,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Data.Entity" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
@@ -96,8 +97,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Misc\Common.cs" />
-    <Compile Include="Misc\ParameterNames.cs" />
     <Compile Include="Module.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
@@ -112,12 +111,18 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Services\Implementations\RecordService.cs" />
+    <Compile Include="Services\Implementations\DocumentService.cs" />
     <Compile Include="Services\Implementations\ContractService.cs" />
+    <Compile Include="Services\Interfaces\IRecordService.cs" />
+    <Compile Include="Services\Interfaces\IDocumentService.cs" />
     <Compile Include="Services\Interfaces\IContractService.cs" />
     <Compile Include="ViewModels\AddContractOrganizationViewModel.cs" />
     <Compile Include="ViewModels\ContractViewModel.cs" />
     <Compile Include="ViewModels\OrgContractsHeaderViewModel.cs" />
     <Compile Include="ViewModels\OrgContractsViewModel.cs" />
+    <Compile Include="ViewModels\RecordDocumentsCollectionViewModel.cs" />
+    <Compile Include="ViewModels\RecordDocumentViewModel.cs" />
     <Compile Include="Views\AddContractOrganizationView.xaml.cs">
       <DependentUpon>AddContractOrganizationView.xaml</DependentUpon>
     </Compile>
@@ -126,6 +131,9 @@
     </Compile>
     <Compile Include="Views\OrgContractsHeaderView.xaml.cs">
       <DependentUpon>OrgContractsHeaderView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\RecordDocsView.xaml.cs">
+      <DependentUpon>RecordDocsView.xaml</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -169,6 +177,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\OrgContractsHeaderView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\RecordDocsView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
