--- a/PatientRecordsModule/PatientRecordsModule.csproj
+++ b/PatientRecordsModule/PatientRecordsModule.csproj
@@ -128,6 +128,7 @@
     <Compile Include="DTOs\RecordDTO.cs" />
     <Compile Include="DTOs\VisitDTO.cs" />
     <Compile Include="Misc\Common.cs" />
+    <Compile Include="Misc\IRecordTypeProtocol.cs" />
     <Compile Include="Misc\ParameterNames.cs" />
     <Compile Include="Misc\SuggestionProviders\MKBSuggestionProvider.cs" />
     <Compile Include="Misc\SuggestionProviders\SuggestionProviderNames.cs" />
