--- a/Shell/App.config
+++ b/Shell/App.config
@@ -52,4 +52,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <appSettings>
+    <add key="CurrentLpuName" value="Больница №1" />
+  </appSettings>
 </configuration>
