--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Threading" />
     <Reference Include="System.Threading.Tasks" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -141,6 +142,16 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\Images\ConfigurationSettings256x256.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Services\Implementations\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\AttachDocument48x48.png" />
+    <Resource Include="Resources\Images\AttachFile48x48.png" />
+    <Resource Include="Resources\Images\DetachDocument48x48.png" />
+    <Resource Include="Resources\Images\DetachFile48x48.png" />
+    <Resource Include="Resources\Images\Mark48x48.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
