Schema changes: added RecordTypeEditors entity, modified some associations
Implemented attach/detach files for record

--- a/Core.Data/Core.Data.csproj
+++ b/Core.Data/Core.Data.csproj
@@ -132,6 +132,9 @@
     <Compile Include="RecordDocument.cs">
       <DependentUpon>ChildCareModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="RecordTypeEditor.cs">
+      <DependentUpon>ChildCareModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="ReportTemplate.cs">
       <DependentUpon>ChildCareModel.tt</DependentUpon>
     </Compile>
