--- a/OrganizationContracts/OrganizationContractsModule.csproj
+++ b/OrganizationContracts/OrganizationContractsModule.csproj
@@ -132,8 +132,8 @@
     <Compile Include="Views\OrgContractsHeaderView.xaml.cs">
       <DependentUpon>OrgContractsHeaderView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\RecordDocsView.xaml.cs">
-      <DependentUpon>RecordDocsView.xaml</DependentUpon>
+    <Compile Include="Views\RecordDocumentsView.xaml.cs">
+      <DependentUpon>RecordDocumentsView.xaml</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -180,7 +180,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\RecordDocsView.xaml">
+    <Page Include="Views\RecordDocumentsView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
