--- a/ScheduleModule/ScheduleModule.csproj
+++ b/ScheduleModule/ScheduleModule.csproj
@@ -118,6 +118,7 @@
     <Compile Include="DTO\ScheduledAssignmentDTO.cs" />
     <Compile Include="Exceptions\AssignmentConflictException.cs" />
     <Compile Include="Exceptions\SamePatientAssignmentConflictException.cs" />
+    <Compile Include="Misc\ParameterNames.cs" />
     <Compile Include="Misc\Privilegies.cs" />
     <Compile Include="Misc\UIConfiguration.cs" />
     <Compile Include="Module.cs" />
@@ -196,6 +197,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Views\ScheduleAssignmentUpdateView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Views\TimeTickerView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -206,6 +211,11 @@
     <Resource Include="Resources\Images\NextWeek48x48.png" />
     <Resource Include="Resources\Images\PreviousDay48x48.png" />
     <Resource Include="Resources\Images\PreviousWeek48x48.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\EditSchedule48x48.png" />
+    <Resource Include="Resources\Images\Today48x48.png" />
+    <Resource Include="Resources\Images\ViewSchedule48x48.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
