--- a/AdminModule/AdminModule.csproj
+++ b/AdminModule/AdminModule.csproj
@@ -117,6 +117,8 @@
     <Compile Include="Module.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\AdminEmptyViewModel.cs" />
+    <Compile Include="Converters\BoolToWindowStateConverter.cs" />
+    <Compile Include="ViewModels\ReportTemplateEditorViewModel.cs" />
     <Compile Include="ViewModels\ReportTemplatesManagerViewModel.cs" />
     <Compile Include="ViewModels\AdminHeaderViewModel.cs" />
     <Compile Include="Views\AdminHeaderView.xaml.cs">
