--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -142,6 +142,15 @@
   <ItemGroup>
     <Resource Include="Resources\Images\ConfigurationSettings256x256.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\DocumentImport48x48.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\SaveWord48x48.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\Word48x48.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
