--- a/AdminModule/AdminModule.csproj
+++ b/AdminModule/AdminModule.csproj
@@ -117,7 +117,6 @@
     <Compile Include="Module.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\AdminEmptyViewModel.cs" />
-    <Compile Include="Converters\BoolToWindowStateConverter.cs" />
     <Compile Include="ViewModels\ReportTemplateEditorViewModel.cs" />
     <Compile Include="ViewModels\ReportTemplatesManagerViewModel.cs" />
     <Compile Include="ViewModels\AdminHeaderViewModel.cs" />
@@ -171,6 +170,7 @@
       <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
