--- a/PatientRecordsModule/PatientRecordsModule.csproj
+++ b/PatientRecordsModule/PatientRecordsModule.csproj
@@ -122,6 +122,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DTOs\DocumentDTO.cs" />
     <Compile Include="DTOs\BrigadeDTO.cs" />
     <Compile Include="DTOs\VisitTemplateDTO.cs" />
     <Compile Include="DTOs\AssignmentDTO.cs" />
@@ -135,8 +136,14 @@
     <Compile Include="Misc\SuggestionProviders\SuggestionProviderNames.cs" />
     <Compile Include="Module.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\Implementations\DocumentService.cs" />
     <Compile Include="Services\Implementations\PatientRecordsService.cs" />
+    <Compile Include="Services\Implementations\RecordService.cs" />
+    <Compile Include="Services\Interfaces\IDocumentService.cs" />
     <Compile Include="Services\Interfaces\IPatientRecordsService.cs" />
+    <Compile Include="Services\Interfaces\IRecordService.cs" />
+    <Compile Include="ViewModels\RecordDocuments\RecordDocumentsCollectionViewModel.cs" />
+    <Compile Include="ViewModels\RecordDocuments\RecordDocumentViewModel.cs" />
     <Compile Include="ViewModels\RecordTypesProtocolViewModels\DefaultProtocolViewModel.cs" />
     <Compile Include="ViewModels\VisitCloseViewModel.cs" />
     <Compile Include="ViewModels\VisitEditorViewModel.cs" />
@@ -147,6 +154,9 @@
     <Compile Include="ViewModels\PersonHierarchicalRecordsViewModel.cs" />
     <Compile Include="ViewModels\PersonHierarchicalVisitsViewModel.cs" />
     <Compile Include="ViewModels\PersonRecordListViewModel.cs" />
+    <Compile Include="Views\RecordDocuments\RecordDocumentsView.xaml.cs">
+      <DependentUpon>RecordDocumentsView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\VisitCloseView.xaml.cs">
       <DependentUpon>VisitCloseView.xaml</DependentUpon>
     </Compile>
@@ -193,6 +203,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="Views\RecordDocuments\RecordDocumentsView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Views\RecordTypesProtocolViews\DefaultProtocolView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -234,6 +248,7 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
