--- a/ScheduleModule/ScheduleModule.csproj
+++ b/ScheduleModule/ScheduleModule.csproj
@@ -133,7 +133,7 @@
     <Compile Include="ViewModels\OccupiedTimeSlotViewModel.cs" />
     <Compile Include="ViewModels\RoomViewModel.cs" />
     <Compile Include="ViewModels\ScheduleAssignmentUpdateViewModel.cs" />
-    <Compile Include="ViewModels\ScheduleItemViewModel.cs" />
+    <Compile Include="ViewModels\WorkingTimeViewModel.cs" />
     <Compile Include="ViewModels\ContentViewModel.cs" />
     <Compile Include="ViewModels\TimeTickerViewModel.cs" />
     <Compile Include="Views\HeaderView.xaml.cs">
@@ -159,6 +159,10 @@
     <ProjectReference Include="..\Core\Core.csproj">
       <Project>{CF75CDE2-002C-4113-824A-03A3B7C6847B}</Project>
       <Name>Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Shared\Shared.Schedule\Shared.Schedule.csproj">
+      <Project>{95DCE91E-6880-4977-9861-2F65D8D61264}</Project>
+      <Name>Shared.Schedule</Name>
     </ProjectReference>
     <ProjectReference Include="..\Shell.Shared\Shell.Shared.csproj">
       <Project>{4E0D997F-374E-43BE-9617-8DA82504B7C8}</Project>
