Schema changed. Updated hierarchical datatemplates for patient records

--- a/Core.Data/Core.Data.csproj
+++ b/Core.Data/Core.Data.csproj
@@ -107,6 +107,9 @@
     <Compile Include="Complication.cs">
       <DependentUpon>ChildCareModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="DefaultProtocol.cs">
+      <DependentUpon>ChildCareModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Diagnosis.cs">
       <DependentUpon>ChildCareModel.tt</DependentUpon>
     </Compile>
