--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Misc\DateTimeFormats.cs" />
     <Compile Include="Misc\Change Tracking\IChangeTracker.cs" />
     <Compile Include="Misc\IEnvironment.cs" />
+    <Compile Include="Misc\IHierarchyItem.cs" />
     <Compile Include="Misc\TimeIntervals\ITimeInterval.cs" />
     <Compile Include="Misc\TimeIntervals\TimeInterval.cs" />
     <Compile Include="Misc\TimeIntervals\TimeIntervalCollection.cs" />
